--- a/app/globals.css
+++ b/app/globals.css
@@ -47,4 +47,15 @@
   .gradient-bg {
     @apply bg-gradient-to-br from-primary-50 to-secondary-50;
   }
+  
+  .scroll-arrow {
+    display: flex;
+  }
+  
+  /* Ukryj strzałkę na ekranach o małej wysokości */
+  @media (max-height: 650px) {
+    .scroll-arrow {
+      display: none;
+    }
+  }
 } 
